wacom: add missing config.h include

Without this, HAVE_GUDEV is not defined, and set_oled terminates
abruptely, leaving out the possibility to set the OLEDs on the Intuos 4.

As Bastien said "Not sure how we all missed that".

https://bugzilla.gnome.org/show_bug.cgi?id=731977