plugins/wacom/gsd-wacom-oled.c
@@ -17,6 +17,8 @@
  *
  */
 
+#include "config.h"
+
 #include <unistd.h>
 #include <math.h>
 #include <pango/pango.h>
